feat: add bounded GeoPackage feature adapter and stable layer keys